--- a/src/index.css
+++ b/src/index.css
@@ -139,7 +139,7 @@ nav .links span {
 }
 
 .leaderBoard-container {
-  background-color: red;
+  background-color: blue;
   color: var(--secondary);
   width: 120px;
   padding: 60px;
