converting pixel done

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
   --primary: #4f515a;
   --secondary: #ebebeb;
   --warning: #da0f41;
+  --transition: all 0.3s linear;
+  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 /* base styles  */
@@ -14,36 +17,46 @@
   padding: 0;
   font-family: "Nunito", sans-serif;
   color: var(--primary);
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
 }
 body {
   background: #fafafa;
+  font-size: 2rem;
 }
 a {
   text-decoration: none;
+}
+ul {
+  list-style-type: none;
 }
 
 /* layout */
 .content {
   margin: 0 auto;
-  max-width: 1200px;
-  padding: 0 20px;
+  max-width: 120rem;
+  padding: 0 2rem;
 }
 
 /* buttons */
 button,
 .btn {
   background: var(--secondary);
-  border-radius: 8px;
+  border-radius: 0.8rem;
   border: 0;
-  padding: 8px 12px;
+  padding: 0.8rem 1.2rem;
   font-weight: 600;
   cursor: pointer;
   display: inline-block;
+  font-size: 1.8rem;
 }
 button:hover,
 .btn:hover {
   background: var(--primary);
   color: white;
+  transform: scale(1.05);
 }
 button:disabled {
   opacity: 0.5;
@@ -54,69 +67,68 @@ button:disabled {
 
 /* forms */
 form {
-  max-width: 400px;
+  max-width: 50rem;
   margin: 0 auto;
-  padding: 30px;
-  border-radius: 8px;
-  box-shadow: 1px 2px 3px rgba(50, 50, 50, 0.05);
-  border: 1px solid var(--secondary);
+  padding: 4rem;
+  border-radius: 0.8rem;
+  box-shadow: var(--light-shadow);
   background: white;
 }
 input {
   border: 0;
-  border-bottom: 1px solid var(--secondary);
-  padding: 10px;
+  border-bottom: 0.1rem solid var(--secondary);
+  padding: 0.1rem;
   outline: none;
   display: block;
   width: 100%;
-  box-sizing: border-box;
-  margin: 20px auto;
+  margin: 2rem auto;
+  font-size: 1.6rem;
 }
 
 /* error text */
 .error {
   color: var(--warning);
-  font-size: 14px;
-  margin: 16px 0;
+  font-size: 1.4rem;
+  margin: 1.6rem 0;
 }
 /* navbar */
 .navbar {
-  padding: 16px 10px;
-  margin-bottom: 60px;
+  padding: 1.6rem 1.2rem;
+  margin-bottom: 6rem;
   background: white;
+  box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
 nav {
   display: flex;
   align-items: center;
-  max-width: 1200px;
+  max-width: 120rem;
   margin: 0 auto;
 }
-nav img {
-  max-height: 60px;
-}
+
 nav h1 {
-  margin-left: 20px;
+  margin-left: 2rem;
+  font-size: 3rem;
 }
 nav .links {
   margin-left: auto;
 }
 nav .links .btn,
 nav .links button {
-  margin-left: 16px;
-  font-size: 14px;
+  margin-left: 1.6rem;
+  font-size: 1.8rem;
 }
 
 nav .links span {
-  font-size: 14px;
+  font-size: 1.4rem;
   display: inline-block;
-  margin-left: 16px;
-  padding-left: 16px;
-  border-left: 1px solid #eee;
+  margin-left: 1.6rem;
+  padding-left: 1.6rem;
+  border-left: 1.1rem solid #eee;
 }
 
 /* landing */
 .hero {
-  padding: 80px 0;
+  padding: 8rem 0;
   height: 60vh;
   background-image: url("https://miro.medium.com/max/800/1*8du96SQUQ0NlWmWvVu20Zw.png");
   background-size: cover;
@@ -124,13 +136,14 @@ nav .links span {
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: var(--dark-shadow);
 }
 
 .play-btn {
-  padding: 20px;
-  font-size: 80px;
+  padding: 1.5rem;
+  font-size: 6rem;
   background-color: rgba(227, 16, 16);
-  border-radius: 20px;
+  border-radius: 2rem;
   cursor: pointer;
 }
 .play-btn:hover {
@@ -141,13 +154,13 @@ nav .links span {
 .leaderBoard-container {
   background-color: blue;
   color: var(--secondary);
-  width: 120px;
-  padding: 60px;
+  width: 12rem;
+  padding: 6rem;
 }
 
 /* game */
 .game-container {
-  max-width: 1200px;
+  max-width: 120rem;
   display: flex;
   align-items: center;
   flex-direction: column;
