--- a/src/index.css
+++ b/src/index.css
@@ -160,28 +160,24 @@ nav .links span {
 }
 /* leadeboard */
 .leaderBoard-container {
-  background-color: blue;
-  color: var(--secondary);
+  color: var(--primary);
   width: 50rem;
-  padding: 6rem;
+  padding: 4rem;
   margin-bottom: 10rem;
+  display: flex;
+  justify-content: space-between;
+  border: solid 1px var(--primary);
+  border-radius: 2rem;
 }
-
-/* play */
-.play-container {
-  background-color: blue;
-  color: var(--secondary);
-  width: 80rem;
-  padding: 8rem;
-  margin-bottom: 6rem;
+.leaderBoard {
+  border-bottom: 2px solid var(--primary);
+  font-weight: 800;
+  font-size: 2.4rem;
+  text-transform: uppercase;
 }
-
-/* pick */
-.pick-container {
-  background-color: blue;
-  color: var(--secondary);
-  width: 80rem;
-  padding: 8rem;
+.leaderBoard-score {
+  text-align: center;
+  margin-top: 1rem;
 }
 
 .pick {
@@ -192,15 +188,17 @@ nav .links span {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 16rem;
-  width: 16rem;
-  border: 1rem solid #4d4c46;
-  border-radius: 50%;
+  height: 20rem;
+  width: 20rem;
   margin-left: 0.8rem;
-  cursor: pointer;
 }
 .pick-icon img {
-  width: 7rem;
+  width: 10rem;
+  padding: rem;
+}
+.pick-icon img:hover {
+  transform: scale(1.05);
+  cursor: pointer;
 }
 .items {
   display: flex;
