--- a/src/index.css
+++ b/src/index.css
@@ -22,9 +22,11 @@
 html {
   font-size: 62.5%;
 }
-body {
+body,
+p,
+span {
   background: #fafafa;
-  font-size: 2rem;
+  font-size: 1.6rem;
 }
 a {
   text-decoration: none;
@@ -50,7 +52,7 @@ button,
   font-weight: 600;
   cursor: pointer;
   display: inline-block;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
 }
 button:hover,
 .btn:hover {
@@ -82,5 +84,5 @@ input {
   display: block;
   width: 100%;
   margin: 2rem auto;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
 }
