--- a/src/pages/game/game.css
+++ b/src/pages/game/game.css
@@ -3,4 +3,14 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  position: relative;
+}
+
+.game-modal-opener {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 1rem 1.4rem;
+  border-radius: 2rem;
+  color: var(--primary);
 }
