--- a/src/pages/landingPage/landingPage.css
+++ b/src/pages/landingPage/landingPage.css
@@ -25,3 +25,10 @@
 .landing-btn:hover {
   transform: scale(1.1);
 }
+
+@media (max-width: 768px) {
+  .landing-btn {
+    padding: 1.3rem;
+    font-size: 5rem;
+  }
+}
