--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -27,3 +27,26 @@
 .modal-btn {
   border: 0.1rem solid var(--primary);
 }
+
+@media screen and (min-width: 768px) and (max-width: 980px) {
+  .modal-content {
+    max-width: 40rem;
+    padding: 2rem;
+  }
+  .modal-content p {
+    font-size: 1.6rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 768px) {
+  .modal-content {
+    max-width: 30rem;
+    padding: 1.2rem;
+  }
+  .modal-content p {
+    font-size: 1.4rem;
+  }
+  .modal-btn {
+    font-size: 1.4rem;
+  }
+}
