--- a/src/pages/game/game.css
+++ b/src/pages/game/game.css
@@ -14,3 +14,20 @@
   border-radius: 2rem;
   color: var(--primary);
 }
+
+@media (max-width: 768px) {
+  .game-modal-opener {
+    padding: 0.8rem 1.2rem;
+    font-size: 1.4rem;
+    position: relative;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 980px) {
+  .game-modal-opener {
+    margin-top: 1rem;
+    padding: 0.8rem 1.2rem;
+    position: relative;
+    font-size: 1.4rem;
+  }
+}
