change return type of context test

--- a/src/index.css
+++ b/src/index.css
@@ -90,7 +90,7 @@ input {
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
 }
 .loader {
   display: block;
