--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -28,7 +28,7 @@ nav .navbar-links span {
   font-size: 3rem;
   font-weight: 800;
 }
-@media (max-width: 980px) {
+@media screen and (min-width: 768px) and (max-width: 980px) {
   .navbar-title {
     font-size: 2.3rem;
   }
