play animation converted to framer

--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -38,7 +38,7 @@
     margin-bottom: 2rem;
   }
 }
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .modal-content {
     max-width: 30rem;
     padding: 1.2rem;
