--- a/src/components/Pick/pick.css
+++ b/src/components/Pick/pick.css
@@ -21,7 +21,7 @@
   width: 10rem;
   cursor: pointer;
 }
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .pick-icon img {
     width: 8rem;
   }
