--- a/src/components/Play/play.css
+++ b/src/components/Play/play.css
@@ -1,7 +1,7 @@
 .play-player-hand {
   transform: rotateY(180deg);
 }
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .play-hands {
     margin-top: 5rem;
     display: flex;
@@ -20,69 +20,4 @@
   .play-hands img {
     width: 60%;
   }
-}
-@keyframes shakePlayer {
-  0% {
-    transform: rotateY(180deg) translateY(0px);
-  }
-  15% {
-    transform: rotateY(180deg) translateY(-50px);
-  }
-  25% {
-    transform: rotateY(180deg) translateY(0px);
-  }
-  35% {
-    transform: rotateY(180deg) translateY(-50px);
-  }
-  50% {
-    transform: rotateY(180deg) translateY(0px);
-  }
-  65% {
-    transform: rotateY(180deg) translateY(-50px);
-  }
-  75% {
-    transform: rotateY(180deg) translateY(0px);
-  }
-  85% {
-    transform: rotateY(180deg) translateY(-50px);
-  }
-  100% {
-    transform: rotateY(180deg) translateY(0px);
-  }
-}
-
-@keyframes shakeComputer {
-  0% {
-    transform: translateY(0px);
-  }
-  15% {
-    transform: translateY(-50px);
-  }
-  25% {
-    transform: translateY(0px);
-  }
-  35% {
-    transform: translateY(-50px);
-  }
-  50% {
-    transform: translateY(0px);
-  }
-  65% {
-    transform: translateY(-50px);
-  }
-  75% {
-    transform: translateY(0px);
-  }
-  85% {
-    transform: translateY(-50px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
-}
-.shakeC {
-  animation: shakeComputer 2s ease;
-}
-.shakeP {
-  animation: shakePlayer 2s ease;
 }
