--- a/src/pages/game/game.css
+++ b/src/pages/game/game.css
@@ -15,7 +15,7 @@
   color: var(--primary);
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .game-modal-opener {
     padding: 0.8rem 1.2rem;
     font-size: 1.4rem;
