--- a/src/pages/not-found/not-found.css
+++ b/src/pages/not-found/not-found.css
@@ -15,7 +15,7 @@
   margin-bottom: 2rem;
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .not-found-image {
     width: 30rem;
     margin-bottom: 2rem;
