--- a/src/index.css
+++ b/src/index.css
@@ -109,7 +109,7 @@ input {
 }
 
 /* global media quries  */
-@media (max-width: 76,8rem) {
+@media screen and (min-width: 576px) and (max-width: 768px) {
   body,
   p,
   span {
@@ -117,7 +117,6 @@ input {
   }
   .content {
     margin: 0 auto;
-    max-width: 50rem;
     padding: 0 2rem;
   }
   button,
